@@ -2,7 +2,8 @@
 //
 // OpenVRML
 //
-// Copyright (C) 1998  Chris Morley
+// Copyright 1998  Chris Morley
+// Copyright 2001, 2002, 2003, 2004  Braden McDaniel
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -37,9 +38,6 @@ namespace openvrml {
     };
 
     class viewer;
-# if 0
-    class ProtoNode;
-# endif
     class scene;
     class Vrml97RootScope;
     class null_node_class;
@@ -47,9 +45,6 @@ namespace openvrml {
 
     class browser : boost::noncopyable {
         friend class Vrml97Parser;
-# if 0
-        friend class ProtoNodeClass;
-# endif
         friend class Vrml97RootScope;
 
     public:
@@ -78,9 +73,6 @@ namespace openvrml {
         std::list<node *> timers;
         std::list<node *> audio_clips;
         std::list<node *> movies;
-# if 0
-        std::list<ProtoNode *> proto_node_list;
-# endif
         bool modified_;
         bool new_view;
         double delta_time;
@@ -180,10 +172,6 @@ namespace openvrml {
         void add_movie(vrml97_node::movie_texture_node &);
         void remove_movie(vrml97_node::movie_texture_node &);
 
-# if 0
-        void add_proto(ProtoNode & node);
-        void remove_proto(ProtoNode & node);
-# endif
         void add_script(script_node &);
         void remove_script(script_node &);
 
