@@ -1,3 +1,10 @@
+2004-02-09 Braden McDaniel  <braden@endoframe.com>
+
+	Cruft removal.
+
+	* src/libopenvrml/openvrml/browser.cpp
+	* src/libopenvrml/openvrml/browser.h
+
 2004-02-08 Braden McDaniel  <braden@endoframe.com>
 
 	Changed whitespace convention used in Java source to match Sun
